--- a/parallex.html
+++ b/parallex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Puppy Parallax on Body</title>
+  <title>The Starry Night</title>
   <style>
    body{ background-image: url(https://wallpapertag.com/wallpaper/full/8/d/4/197245-amazing-starry-sky-wallpaper-2880x1800-samsung.jpg);
     background-size: 100% 100%;
@@ -139,4 +139,5 @@ List'ning still <br>
 Perhaps they never will.</p>
 <img src="https://i.ytimg.com/vi/MEy23IhhnNQ/maxresdefault.jpg" alt="poet-anne" width="400px" height="300px">
 </body>
+
 </html>
